--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -3,7 +3,7 @@
 }
 .container{
     width: 100%;
-    padding: 10%;
+    padding: 5% 10%;
     
 }
 .formWrapper{
@@ -47,7 +47,7 @@
     color: rgb(87, 86, 86);
     text-align: left;
     margin-left: 2em;
-    margin-top: 2em;
+    margin-top: 1em;
 }
 .formWrapper p span{
     color: black;
