fit- added notifications

--- a/src/styles/board.css
+++ b/src/styles/board.css
@@ -144,3 +144,14 @@
   outline: none;
 
   }
+  .deleteIcon{
+    width: 30px;
+    float: right;
+    padding: 5px;
+    cursor: pointer;
+
+
+  }
+  .deleteIcon:hover{
+    transform: scale(1.1);
+  }
