--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -4,7 +4,7 @@
   
 }
 ul{
-    width: 15%;
+    width: 30%;
     display: flex;
     justify-content: space-between;
     float: right;
@@ -25,4 +25,18 @@ li.profile{
     text-align: center;
     font-family: 'Century Gothic';
     font-weight: bolder;
+}
+.logout{
+    width: 100px;
+    height: 40px;
+    background: black !important;
+    color:white;
+    border-radius: 20px 20px;
+    padding: 6px;
+    border-width: 0px;
+    text-align: center;
+}
+.logout:hover{
+    transform: scale(1.02);
+    cursor: pointer;
 }
