--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -3,20 +3,18 @@
     margin: 0;
     border: 0;
 }
-body{
-    
-    background: red;
-  
-  }
+
 .containerFluid{
     font-family: 'Century Gothic';
     width: 100%;
     padding: 0px;
+    height: 100%;
 }
 .container{
-    width: 1005;
+    width: 100%;
     padding: 10%;
     display: flex;
+    height: 550px;
     
 }
 
