--- a/src/styles/board.css
+++ b/src/styles/board.css
@@ -23,7 +23,7 @@
       display: flex;
       justify-content: space-between;
       margin-top: 2.5em;
-      height: 450px;
+      height: 370px;
   }
   /* .wip {
    
@@ -90,6 +90,7 @@
       padding: 10px;
       width: 200px;
       border-radius: 30px 30px;
+      outline: none !important;
   }
   .addTask:hover{
       background: black;
@@ -141,7 +142,8 @@
     border-width: 0px;
     margin-top: 3em;
     float: left;
-  outline: none;
+  outline: none !important;
+
 
   }
   .deleteIcon{
@@ -155,3 +157,23 @@
   .deleteIcon:hover{
     transform: scale(1.1);
   }
+
+
+  .loading-task-item{
+    background: linear-gradient(100deg, #ececec 30%, rgb(216, 216, 216) 50%, rgba(223, 223, 223, 0.678) 70%);
+    animation: loading 1.2s ease-in-out infinite;
+    background-size: 400%;
+    height: 50px;
+    border-radius: 5px 5px;
+    margin-top: 1em;
+ }
+ 
+ @keyframes loading{
+ 0% {
+   background-position: 100% 50%;
+ }
+ 100%{
+   background-position: 0% 50%;
+ }
+ 
+ }
